--- a/WPF/CRUD App/CRUD App/CRUD App.csproj
+++ b/WPF/CRUD App/CRUD App/CRUD App.csproj
@@ -10,7 +10,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="R.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="R.png" />
   </ItemGroup>
 
 </Project>
